# PostgreSQL-Health-Monitor-System

./: Dockerfile  README.md  cronJob.yaml  docker-compose.full.yml  docker-compose.yml  postgres_metrics_exporter.py  postgres_metrics_monitor.py  prometheus.yaml  serviceaccount.yaml  test_metrics.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: alerts.py  auth.py  databases.py  metrics.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: alert.py  database.py  user.py
backend/app/schemas/: alert.py  database.py  user.py
backend/app/services/: notifications.py
demo_app/: app.py
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Databases.tsx  Login.tsx  Users.tsx
frontend/src/services/: api.ts
